fix wrong sizes and values for tablet range

--- a/css/app.css
+++ b/css/app.css
@@ -36,7 +36,7 @@ body {
   padding: 3.1rem 2.4rem 7.9rem;
   min-height: 100vh;
   transition: all 0.3s ease-out; }
-  @media screen and (min-width: 670px) {
+  @media screen and (min-width: 768px) {
     body {
       padding: 14.4rem 9.7rem 23.6rem; } }
 
@@ -130,7 +130,7 @@ body {
           color: var(--mid-blue); }
         .search__bar-left .search__input--dark::placeholder {
           color: var(--white); }
-        @media screen and (min-width: 670px) {
+        @media screen and (min-width: 768px) {
           .search__bar-left .search__input {
             font-size: 1.8rem; } }
     .search__bar .search__error-btn .search__error--active {
@@ -149,7 +149,7 @@ body {
       border-radius: 1rem;
       border: none;
       transition: all 0.2s ease-out; }
-      @media screen and (min-width: 670px) {
+      @media screen and (min-width: 768px) {
         .search__bar .search__error-btn .search__btn {
           width: 10.6rem; } }
       .search__bar .search__error-btn .search__btn:hover {
@@ -161,6 +161,9 @@ body {
   box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.198567);
   border-radius: 1.5rem;
   padding: 3.2rem 2.4rem; }
+  @media screen and (min-width: 768px) {
+    .info {
+      padding: 4rem; } }
   .info--dark {
     background-color: var(--navy-blue);
     box-shadow: none; }
@@ -171,7 +174,7 @@ body {
     .info__header .info__avatar {
       border-radius: 50%;
       margin-right: 1.9rem; }
-    @media screen and (min-width: 730px) {
+    @media screen and (min-width: 768px) {
       .info__header .info__user-info {
         display: flex;
         justify-content: space-between;
@@ -182,7 +185,7 @@ body {
       color: var(--bluish-gray); }
       .info__header .info__user-info .info__joined--dark {
         color: var(--white); }
-      @media screen and (min-width: 630px) {
+      @media screen and (min-width: 768px) {
         .info__header .info__user-info .info__joined {
           font-size: 1.5rem;
           line-height: 2.2rem; } }
@@ -194,7 +197,7 @@ body {
         color: var(--dark-blue); }
         .info__header .info__user-info .info__user .info__username--dark {
           color: var(--white); }
-        @media screen and (min-width: 670px) {
+        @media screen and (min-width: 768px) {
           .info__header .info__user-info .info__user .info__username {
             font-size: 2.6rem;
             line-height: 3.9rem; } }
@@ -212,7 +215,7 @@ body {
   line-height: 2.5rem;
   color: var(--mid-blue);
   margin-bottom: 2.3rem; }
-  @media screen and (min-width: 670px) {
+  @media screen and (min-width: 768px) {
     .info__summary .info__text {
       font-size: 1.5rem;
       line-height: 2.5rem; } }
@@ -224,12 +227,15 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 2.4rem; }
+  @media screen and (min-width: 768px) {
+    .info__summary .info__stats {
+      padding: 1.8rem 3.2rem; } }
 .info__summary .info__titles {
   font-size: 1.1rem;
   line-height: 1.6rem;
   text-align: center;
   color: var(--mid-blue); }
-  @media screen and (min-width: 670px) {
+  @media screen and (min-width: 768px) {
     .info__summary .info__titles {
       font-size: 1.3rem;
       line-height: 1.9rem; } }
@@ -238,7 +244,7 @@ body {
   font-size: 1.6rem;
   line-height: 2.4rem;
   color: var(--very-dark-blue); }
-  @media screen and (min-width: 670px) {
+  @media screen and (min-width: 768px) {
     .info__summary .info__results {
       font-size: 2.2rem;
       line-height: 3.3rem; } }
@@ -252,7 +258,7 @@ body {
   font-size: 1.3rem;
   line-height: 1.9rem;
   color: var(--mid-blue); }
-  @media screen and (min-width: 670px) {
+  @media screen and (min-width: 768px) {
     .info__summary .info__links {
       font-size: 1.5rem;
       line-height: 2.2rem; } }
