--- a/scss/2-component/info/_info-summary.scss
+++ b/scss/2-component/info/_info-summary.scss
@@ -5,7 +5,7 @@
     color: var(--mid-blue);
     margin-bottom: 2.3rem;
 
-    @media screen and (min-width: 670px) {
+    @media screen and (min-width: 768px) {
       font-size: 1.5rem;
       line-height: 2.5rem;
     }
@@ -20,6 +20,10 @@
     align-items: center;
     margin-bottom: 2.4rem;
     // max-width: 48rem;
+
+    @media screen and (min-width: 768px) {
+      padding: 1.8rem 3.2rem;
+    }
   }
 
   //   .info__repos,
@@ -33,7 +37,7 @@
     text-align: center;
     color: var(--mid-blue);
 
-    @media screen and (min-width: 670px) {
+    @media screen and (min-width: 768px) {
       font-size: 1.3rem;
       line-height: 1.9rem;
     }
@@ -45,7 +49,7 @@
     line-height: 2.4rem;
     color: var(--very-dark-blue);
 
-    @media screen and (min-width: 670px) {
+    @media screen and (min-width: 768px) {
       font-size: 2.2rem;
       line-height: 3.3rem;
     }
@@ -68,7 +72,7 @@
     line-height: 1.9rem;
     color: var(--mid-blue);
 
-    @media screen and (min-width: 670px) {
+    @media screen and (min-width: 768px) {
       font-size: 1.5rem;
       line-height: 2.2rem;
     }
